@@ -20,18 +20,6 @@ B<BYTE_MAX : byte ()>
 
 A constant holding the maximum value a byte can have, C<127>.
 
-=head2 BYTE_BYTES
-
-B<sub BYTE_BYTES : int ()>
-
-The number of bytes used to represent a byte value in two's complement binary form, C<1>.
-
-=head2 BYTE_SIZE
-
-B<sub BYTE_SIZE : int ()>
-
-The number of bits used to represent a byte value in two's complement binary form, C<8>.
-
 =head2 SHORT_MIN
 
 B<sub SHORT_MIN : short ()>
@@ -43,18 +31,6 @@ A constant holding the minimum value a short can have, C<-32768>.
 B<sub SHORT_MAX : short ()>
 
 A constant holding the maximum value a short can have, C<32767>.
-
-=head2 SHORT_BYTES
-
-B<sub SHORT_BYTES : int ()>
-
-The number of shorts used to represent a short value in two's complement binary form, C<2>.
-
-=head2 SHORT_SIZE
-
-B<sub SHORT_SIZE : int ()>
-
-The number of bits used to represent a short value in two's complement binary form, C<16>.
 
 =head2 INT_MIN
 
@@ -68,18 +44,6 @@ B<sub INT_MAX : int ()>
 
 A constant holding the maximum value a int can have, C<2147483647>.
 
-=head2 INT_BYTES
-
-B<sub INT_BYTES : int ()>
-
-The number of ints used to represent a int value in two's complement binary form, C<4>.
-
-=head2 INT_SIZE
-
-B<sub INT_SIZE : int ()>
-
-The number of bits used to represent a int value in two's complement binary form, C<32>.
-
 =head2 LONG_MIN
 
 B<sub LONG_MIN : long ()>
@@ -92,63 +56,18 @@ B<sub LONG_MAX : long ()>
 
 A constant holding the maximum value a long can have, C<9223372036854775807>.
 
-=head2 LONG_BYTES
+=head2 FLT_MIN
 
-B<sub LONG_BYTES : int ()>
+B<sub FLT_MIN : float ()>
 
-The number of longs used to represent a long value in two's complement binary form, C<8>.
+=head2 FLT_MAX
 
-=head2 LONG_SIZE
+B<sub FLT_MAX : float ()>
 
-B<sub LONG_SIZE : int ()>
+=head2 DBL_MIN
 
-The number of bits used to represent a long value in two's complement binary form, C<64>.
+B<sub DBL_MIN : double ()>
 
-=head2 FLOAT_MIN
+=head2 DBL_MAX
 
-B<sub FLOAT_MIN : float ()>
-
-A constant holding the minimum value a float can have, C<-128>.
-
-=head2 FLOAT_MAX
-
-B<sub FLOAT_MAX : float ()>
-
-A constant holding the maximum value a float can have, C<127>.
-
-=head2 FLOAT_SIZE
-
-B<sub FLOAT_SIZE : int ()>
-
-The number of bits used to represent a float value in two's complement binary form.
-
-=head2 FLOAT_BYTES
-
-B<sub FLOAT_BYTES : int ()>
-
-The number of floats used to represent a float value in two's complement binary form.
-
-=head2 DOUBLE_MIN
-
-B<sub DOUBLE_MIN : double ()>
-
-A constant holding the minimum value a double can have, C<-128>.
-
-=head2 DOUBLE_MAX
-
-B<sub DOUBLE_MAX : double ()>
-
-A constant holding the maximum value a double can have, C<127>.
-
-=head2 DOUBLE_SIZE
-
-B<sub DOUBLE_SIZE : int ()>
-
-The number of bits used to represent a double value in two's complement binary form.
-
-=head2 DOUBLE_BYTES
-
-B<sub DOUBLE_BYTES : int ()>
-
-The number of doubles used to represent a double value in two's complement binary form.
-
+B<sub DBL_MAX : double ()>
