@@ -22,9 +22,6 @@ my $DOUBLE_PRECICE = 65536.5;
 # Positive infinity(unix like system : inf, Windows : 1.#INF)
 my $POSITIVE_INFINITY = 9**9**9;
 
-# Negative infinity(unix like system : -inf, Windows : -1.#INF)
-my $NEGATIVE_INFINITY = -9**9**9;
-
 my $NaN = 9**9**9 / 9**9**9;
 
 my $nan_re = qr/(nan|ind)/i;
@@ -42,38 +39,33 @@ my $start_objects_count = SPVM::get_objects_count();
 # float
 {
   ok(SPVM::TestCase::Std::TypeUtil->float_pass_positive_infinity($POSITIVE_INFINITY));
-  ok(SPVM::TestCase::Std::TypeUtil->float_pass_negative_infinity($NEGATIVE_INFINITY));
   ok(SPVM::TestCase::Std::TypeUtil->float_pass_nan($NaN));
   
   ok(SPVM::TestCase::Std::TypeUtil->isinff());
   ok(SPVM::TestCase::Std::TypeUtil->isfinitef());
   ok(SPVM::TestCase::Std::TypeUtil->isnanf());
   
-  is(SPVM::Std::TypeUtil->FLOAT_POSITIVE_INFINITY(), $POSITIVE_INFINITY);
-  is(SPVM::Std::TypeUtil->FLOAT_NEGATIVE_INFINITY(), $NEGATIVE_INFINITY);
+  is(SPVM::Std::TypeUtil->INFINITYF(), $POSITIVE_INFINITY);
   
-  like(SPVM::Std::TypeUtil->FLOAT_NAN(), $nan_re);
+  like(SPVM::Std::TypeUtil->NANF(), $nan_re);
   
   # Check not Inf or NaN in Perl value
-  like(SPVM::Std::TypeUtil->FLOAT_MAX(), qr/[0-9]/);
-  like(SPVM::Std::TypeUtil->FLOAT_MIN(), qr/[0-9]/);
-  like(SPVM::Std::TypeUtil->FLOAT_MIN_NORMAL(), qr/[0-9]/);
+  like(SPVM::Std::TypeUtil->FLT_MAX(), qr/[0-9]/);
+  like(SPVM::Std::TypeUtil->FLT_MIN(), qr/[0-9]/);
 }
 
 # SPVM::Double
 {
   ok(SPVM::TestCase::Std::TypeUtil->double_pass_positive_infinity($POSITIVE_INFINITY));
-  ok(SPVM::TestCase::Std::TypeUtil->double_pass_negative_infinity($NEGATIVE_INFINITY));
   ok(SPVM::TestCase::Std::TypeUtil->double_pass_nan($NaN));
   
   ok(SPVM::TestCase::Std::TypeUtil->isinf());
   ok(SPVM::TestCase::Std::TypeUtil->isfinite());
   ok(SPVM::TestCase::Std::TypeUtil->isnan());
   
-  is(SPVM::Std::TypeUtil->DOUBLE_POSITIVE_INFINITY(), $POSITIVE_INFINITY);
-  is(SPVM::Std::TypeUtil->DOUBLE_NEGATIVE_INFINITY(), $NEGATIVE_INFINITY);
+  is(SPVM::Std::TypeUtil->INFINITY(), $POSITIVE_INFINITY);
   
-  like(SPVM::Std::TypeUtil->DOUBLE_NAN(), $nan_re);
+  like(SPVM::Std::TypeUtil->NAN(), $nan_re);
 }
 
 # All object is freed
