@@ -4,6 +4,7 @@
     my $nums = [0.1, 0.4, 0.8];
   - remove Std::Number::Util many subtoutines
   - rename Std::Number::Util to Std::TypeUtil
+    and Std::TypeUtil become C language inttype.h and float.h wrapper
   - remove Std::Array::Util
 0.0333 2018-05-05
   - fix array init type bug
